--- a/style.css
+++ b/style.css
@@ -12,8 +12,15 @@ a{
 
 }
 h1{
-    font-size: 72px;
+    font-size: 4em;
     margin: 30px auto;
+}
+h2{
+    font-size: 3em;
+}
+.container{
+    width: 800px;
+    margin: 0 auto;
 }
 /*-------------------------HEADER*/
 
@@ -70,12 +77,81 @@ main{
 }
 .intro-img img{
     position: absolute;
-    width: 700px;
+    width: 100%;
 }
 .arrow{
     font-size: 72px;
 }
 /*BUSINESS-OPPORTUNITY*/
+.business-opportunity{
+margin-top: 120px;
+}
+
+.find-your-plan-fee{
+    display: flex;
+}
+.find-your-plan-fee div{
+    margin: 20px 20px;
+}
+.monthly-fee span{
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    border: 1px solid black;
+    display: inline-block;
+    vertical-align:middle;
+}
+.annual-fee span{
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    border: 1px solid black;
+    display: inline-block;
+    vertical-align:middle;
+
+}
+.monthly-fee:hover span{
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    border: 6px solid blue;
+    display: inline-block;
+}
+.annual-fee:hover span{
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    border: 6px solid blue;
+    display: inline-block;
+}
+
+.business-plan-list{
+    margin-top: 40px;
+    display: flex;
+}
+.business-plan-vertical-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 400px;
+    width: calc( 100% / 3);
+    margin: 0 10px;
+    border: 1px solid black;
+}
+
+.box-container{
+    width: 90%;
+}
+.business-plan-title{
+    border-bottom: 1px solid black;
+    display: flex;
+    justify-content: center;
+}
+.business-plan-vertical-box div{
+    flex-grow: 1;
+}
+
+
 
 
 /*-------------------------FOOTER*/
